--- a/.github/workflows/master_ci_cd.yml
+++ b/.github/workflows/master_ci_cd.yml
@@ -2,9 +2,9 @@
 name: release CI, CD workflow 
 on: 
   push:
-    branches: [ "master"]
+    branches: [ "rick_morty"]
   pull_request:
-    branches: [ "master"]
+    branches: [ "rick_morty"]
 jobs:
   release:
     runs-on: ubuntu-latest
