--- a/.github/workflows/release_ci_cd.yml
+++ b/.github/workflows/release_ci_cd.yml
@@ -64,8 +64,8 @@ jobs:
       - name: update model name in k8 
         run: sed -i 's/{model_name}/${{secrets.MODEL_NAMES}}/g' manifests/k8s.yaml
         
-      - name: update nodo in k8 
-        run: sed -i 's/{nodo}/${{secrets.NODO}}/g' manifests/k8s.yaml
+      - name: update nodos in k8 
+        run: sed -i 's/{nodos}/${{secrets.NODOS}}/g' manifests/k8s.yaml
 
       - name: update _ by - 
         run: sed -i 's/_/-/g' manifests/k8s.yaml
