--- a/.github/workflows/release_ci_cd.yml
+++ b/.github/workflows/release_ci_cd.yml
@@ -2,15 +2,10 @@
 name: release CI, CD workflow 
 on: 
   push:
-<<<<<<< HEAD:.github/workflows/master_ci_cd.yml
+
     branches: [ "rick_morty"]
   pull_request:
     branches: [ "rick_morty"]
-=======
-    branches: [ "release"]
-  pull_request:
-    branches: [ "release"]
->>>>>>> ad6cbc0fda7f2a1c2d42135847e0f2f83964c32f:.github/workflows/release_ci_cd.yml
 jobs:
   release_ci_cd:
     runs-on: ubuntu-latest
@@ -69,6 +64,9 @@ jobs:
 
       - name: update model name in k8 
         run: sed -i 's/{model_name}/${{secrets.MODEL_NAMES}}/g' manifests/k8s.yaml
+        
+      - name: update model nodos in k8 
+        run: sed -i 's/{nodos}/${{secrets.NODOS}}/g' manifests/k8s.yaml
 
       - name: update _ by - 
         run: sed -i 's/_/-/g' manifests/k8s.yaml
