--- a/.github/workflows/release_ci_cd.yml
+++ b/.github/workflows/release_ci_cd.yml
@@ -2,9 +2,9 @@
 name: release CI, CD workflow 
 on: 
   push:
-    branches: [ "rick_morty"]
+    branches: [ "develop"]
   pull_request:
-    branches: [ "rick_morty"]
+    branches: [ "develop"]
 jobs:
   release_ci_cd:
     runs-on: ubuntu-latest
