--- a/.github/workflows/release_ci_cd.yml
+++ b/.github/workflows/release_ci_cd.yml
@@ -43,7 +43,7 @@ jobs:
           docker cp build/.  serving_base:/usr/local/apache2/htdocs
           
       - name: Build the custom Docker image
-        run: docker commit --change "ENV MODEL_NAMES ${{secrets.MODEL_NAMES}}" serving_base ${{secrets.DOCKER_USER}}/${{secrets.MODEL_NAMES}}:${{github.sha}}
+        run: docker commit --change "ENV MODEL_NAME ${{secrets.MODEL_NAME}}" serving_base ${{secrets.DOCKER_USER}}/${{secrets.MODEL_NAME}}:${{github.sha}}
 
       - name: show docker images
         run: docker images
